--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-
-  },
+  "scripts": {},
   "keywords": [],
   "author": "Aurelio Florez",
   "license": "ISC",
   "dependencies": {
     "acorn": "^8.15.0",
+    "readline-sync": "^1.4.10",
     "simple-statistics": "^7.8.8"
   }
 }
